fix1.2.10: modal z-index

--- a/modalz/index.scss
+++ b/modalz/index.scss
@@ -14,7 +14,7 @@
 
     &-btn {
         position: absolute;
-        z-index: 10002;
+        z-index: 100002;
         top: 16px;
         right: 16px;
         width: 40px;
